--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,18 @@
 version: 2.1
 
 orbs:
-  terraform: circleci/terraform@3.2.0
+  terraform: circleci/terraform@3.1
   docker: circleci/docker@1.7.0
   gcp-gcr: circleci/gcp-gcr@0.15.1
   gcp-cli: circleci/gcp-cli@2.4.1
 
+executors:
+  ubuntu-2204:
+    machine:
+      image: ubuntu-2204:2023.04.2
+
 # Commands
 commands:
-  install_latest_terraform:
-    description: "Install latest terraform"
-    steps:
-      - run:
-          name: Install latest terraform
-          command: |
-            VER=1.4.5 ZIPFILE="terraform_${VER}_linux_amd64.zip" SUMFILE="terraform_${VER}_SHA256SUMS" \
-            SIGFILE="${SUMFILE}.sig"; for fn in "${ZIPFILE}" "${SUMFILE}" "${SIGFILE}" ; do \
-            wget -nv https://releases.hashicorp.com/terraform/${VER}/${fn}; done; \
-            gpg --receive-keys 374EC75B485913604A831CC7C820C6D5CD27AB87 && \
-            sha256sum -c --ignore-missing ${SUMFILE} && gpg --verify ${SIGFILE} ${SUMFILE} && \
-            unzip "${ZIPFILE}" && mv terraform /usr/local/bin && terraform -v
-
   extract_bootnode_id:
     description: "Extract and set bootnode id"
     parameters:
@@ -62,10 +54,13 @@ commands:
 jobs:
   validate_infrastructure:
     description: "Validate Infrastructure"
-    executor: terraform/default
+    executor: ubuntu-2204
     steps:
       - checkout
-      - install_latest_terraform
+      - terraform/install:
+          arch: amd64
+          os: linux
+          terraform_version: 1.4.5
       - terraform/init:
           path: infrastructure
       - terraform/validate:
@@ -82,13 +77,16 @@ jobs:
       deployment_environment:
         type: string
     description: "Apply Infrastructure"
-    executor: terraform/default
+    executor: ubuntu-2204
     environment:
       TF_VAR_SUB_DOMAIN: << parameters.sub_domain >>
       TF_VAR_DEPLOYMENT_ENVIRONMENT: << parameters.deployment_environment >>
     steps:
       - checkout
-      - install_latest_terraform
+      - terraform/install:
+          arch: amd64
+          os: linux
+          terraform_version: 1.4.5
       - terraform/plan:
           backend_config: "prefix=<< parameters.deployment_environment >>-l1-jur-node"
           path: infrastructure
