--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -11,7 +11,6 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
 scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
-static_assertions = "1.1.0"
 pallet-aura = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
 pallet-assets = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
 pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
@@ -38,16 +37,6 @@ pallet-multisig = { version = "4.0.0-dev", default-features = false, git = "http
 sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
 sp-consensus-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
 
-
-# Used for Governance
-pallet-collective  = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
-pallet-democracy  = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
-pallet-elections-phragmen = { version = "5.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
-pallet-membership = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
-pallet-treasury  = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
-pallet-scheduler = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
-pallet-preimage  = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
-
 # Used for the node token-swap's RPCs
 frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
 pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
@@ -58,7 +47,10 @@ frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, g
 hex-literal = "0.3.4"
 
 # Local Dependencies
-pallet-token-swap = { version = "4.0.0-dev", default-features = false, path = "../pallets/token-swap" }
+pallet-token-swap = { version = "0.1.0", default-features = false, path = "../pallets/token-swap" }
+pallet-community = { version = "0.1.0", default-features = false, path = "../pallets/community" }
+pallet-proposal = { version = "0.1.0", default-features = false, path = "../pallets/proposal" }
+pallet-passport = { version = "0.1.0", default-features = false, path = "../pallets/passport" }
 
 primitives = { package = 'jur-primitives', path = '../primitives', default-features = false }
 
@@ -99,16 +91,12 @@ std = [
 	"sp-staking/std",
 	"sp-transaction-pool/std",
 	"sp-version/std",
-	"pallet-treasury/std",
-	"pallet-collective/std",
-	"pallet-elections-phragmen/std",
-	"pallet-membership/std",
-	"pallet-democracy/std",
-	"pallet-scheduler/std",
-	"pallet-preimage/std",
 	"pallet-multisig/std",
 	"primitives/std",
 	"sp-consensus-grandpa/std",
+	"pallet-community/std",
+	"pallet-proposal/std",
+	"pallet-passport/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
@@ -118,9 +106,10 @@ runtime-benchmarks = [
 	"pallet-balances/runtime-benchmarks",
 	"pallet-timestamp/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
-	"pallet-collective/runtime-benchmarks",
-	"pallet-membership/runtime-benchmarks",
 	"pallet-token-swap/runtime-benchmarks",
+	"pallet-community/runtime-benchmarks",
+	"pallet-proposal/runtime-benchmarks",
+	"pallet-passport/runtime-benchmarks"
 ]
 try-runtime = [
 	"frame-executive/try-runtime",
@@ -131,8 +120,9 @@ try-runtime = [
 	"pallet-sudo/try-runtime",
 	"pallet-timestamp/try-runtime",
 	"pallet-transaction-payment/try-runtime",
-	"pallet-collective/try-runtime",
-	"pallet-membership/try-runtime",
 	"pallet-multisig/try-runtime",
 	"pallet-token-swap/try-runtime",
+	"pallet-community/try-runtime",
+	"pallet-proposal/try-runtime",
+	"pallet-passport/try-runtime"
 ]
