--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "jur-node-runtime"
-version = "v1.0.0"
+version = "1.0.0"
 edition = "2021"
 license = "Unlicense"
 publish = false
