--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -73,4 +73,4 @@ runtime-benchmarks = [
 ]
 # Enable features that allow the runtime to be tried and debugged. Name might be subject to change
 # in the near future.
-try-runtime = ["jur-node-runtime/try-runtime", "try-runtime-cli"]
+try-runtime = ["jur-node-runtime/try-runtime", "try-runtime-cli/try-runtime"]
