--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
         rustup default stable
         rustup update nightly
         rustup update stable
+        rustup toolchain install nightly
         rustup target add wasm32-unknown-unknown --toolchain nightly
           
     - name: Build
