--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,10 +27,11 @@ jobs:
         rustup default stable
         rustup update nightly
         rustup update stable
+        rustup toolchain install nightly
         rustup target add wasm32-unknown-unknown --toolchain nightly
           
     - name: Build
       run: SKIP_WASM_BUILD= cargo check --all-targets --features runtime-benchmarks
       
     - name: Test
-      run: SKIP_WASM_BUILD= cargo test --workspace --features runtime-benchmarks -- --nocapture
+      run: SKIP_WASM_BUILD= cargo test --workspace --features runtime-benchmarks,try-runtime -- --nocapture
