--- a/pallets/user/Cargo.toml
+++ b/pallets/user/Cargo.toml
@@ -5,7 +5,7 @@ description = "Jur User Pallet"
 authors = ["Jur Team <https://github.com/jurteam>"]
 homepage = "https://jur.io/"
 edition = "2021"
-license = "Unlicense"
+license = "Apache-2.0"
 publish = false
 repository = "https://github.com/jurteam/jur-node/"
 
