--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -56,6 +56,7 @@ pallet-community = { version = "0.1.0", default-features = false, path = "../pal
 pallet-proposal = { version = "0.1.0", default-features = false, path = "../pallets/proposal" }
 pallet-user = { version = "0.1.0", default-features = false, path = "../pallets/user" }
 pallet-passport = { version = "0.1.0", default-features = false, path = "../pallets/passport" }
+pallet-whitelist = { version = "0.1.0", default-features = false, path = "../pallets/whitelist" }
 
 
 primitives = { package = 'jur-primitives', path = '../primitives', default-features = false }
