--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Set-Up
-      run: sudo apt install -y git clang curl libssl-dev llvm libudev-dev protobuf-compiler
+      run: sudo apt update ; sudo apt upgrade -y ; sudo apt install -f -y git clang curl libssl-dev llvm libudev-dev protobuf-compiler
 
     - name: Install Rustup
       run: |
