--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,12 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/cache/restore@v3
       with:
+        key: ${{ runner.os }}-toolchain-${{ hashFiles('**/rust-toolchain.toml') }}
+        path: |
+          ~/.cargo/
+          ~/.rustup/
+    - uses: actions/cache/restore@v3
+      with:
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
         path: |
           ~/.cargo/
@@ -88,6 +94,12 @@ jobs:
     - name: Install protoc
       uses: arduino/setup-protoc@v2
     - uses: actions/checkout@v4
+    - uses: actions/cache/restore@v3
+      with:
+        key: ${{ runner.os }}-toolchain-${{ hashFiles('**/rust-toolchain.toml') }}
+        path: |
+          ~/.cargo/
+          ~/.rustup/
     - uses: actions/cache/restore@v3
       with:
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
@@ -106,9 +118,15 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/cache/restore@v3
       with:
+        key: ${{ runner.os }}-toolchain-${{ hashFiles('**/rust-toolchain.toml') }}
+        path: |
+          ~/.cargo/
+          ~/.rustup/
+    - uses: actions/cache/restore@v3
+      with:
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
         path: |
           ~/.cargo/
           ./target/
     - name: Test
-      run: SKIP_WASM_BUILD= cargo test --workspace --features runtime-benchmarks -- --nocapture
+      run: SKIP_WASM_BUILD= cargo test --workspace --features runtime-benchmarks
