--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,25 +116,17 @@ jobs:
     - name: Install protoc
       uses: arduino/setup-protoc@v2
     - uses: actions/checkout@v4
-    - uses: actions/cache/restore@v3
+    - name: Free Up GitHub Actions Ubuntu Runner Disk Space
+      uses: jlumbroso/free-disk-space@main
       with:
-        key: ${{ runner.os }}-toolchain-${{ hashFiles('**/rust-toolchain.toml') }}
-        path: |
-          ~/.cargo/
-          ~/.rustup/
-    - uses: actions/cache/restore@v3
-      with:
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-        path: |
-          ~/.cargo/
-          ./target/
-    - name: cargo test cache
-      id: cache-cargo-test
-      uses: actions/cache@v3
-      with:
-        key: ${{ runner.os }}-cargo-test-${{ hashFiles('**/Cargo.lock') }}
-        path: |
-          ~/.cargo/
-          ./target/
+          # This might remove tools that are actually needed, if set to "true" but frees about 6 GB
+          tool-cache: false
+
+          # All of these default to true, but feel free to set to "false" if necessary for your workflow
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          swap-storage: true
     - name: Test
       run: SKIP_WASM_BUILD= cargo test --workspace --features runtime-benchmarks
