integrated pallet with runtime

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -60,7 +60,7 @@ pallet-proposal = { version = "1.0.0", default-features = false, path = "../pall
 pallet-user = { version = "1.0.0", default-features = false, path = "../pallets/user" }
 pallet-passport = { version = "1.0.0", default-features = false, path = "../pallets/passport" }
 pallet-whitelist = { version = "1.0.0", default-features = false, path = "../pallets/whitelist" }
-
+pallet-bounties = { version = "1.0.0", default-features = false, path = "../pallets/bounties" }
 
 primitives = { package = 'jur-primitives', path = '../primitives', default-features = false }
 
@@ -88,6 +88,7 @@ std = [
 	"pallet-token-swap/std",
 	"pallet-user/std",
 	"pallet-whitelist/std",
+	"pallet-bounties/std",
 	"pallet-timestamp/std",
 	"pallet-transaction-payment-rpc-runtime-api/std",
 	"pallet-transaction-payment/std",
