--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -61,6 +61,7 @@ pallet-user = { version = "1.0.0", default-features = false, path = "../pallets/
 pallet-passport = { version = "1.0.0", default-features = false, path = "../pallets/passport" }
 pallet-whitelist = { version = "1.0.0", default-features = false, path = "../pallets/whitelist" }
 pallet-bounties = { version = "1.0.0", default-features = false, path = "../pallets/bounties" }
+pallet-events = { version = "1.0.0", default-features = false, path = "../pallets/event" }
 
 primitives = { package = 'jur-primitives', path = '../primitives', default-features = false }
 
@@ -89,6 +90,7 @@ std = [
 	"pallet-user/std",
 	"pallet-whitelist/std",
 	"pallet-bounties/std",
+	"pallet-events/std",
 	"pallet-timestamp/std",
 	"pallet-transaction-payment-rpc-runtime-api/std",
 	"pallet-transaction-payment/std",
