--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -130,7 +130,8 @@ runtime-benchmarks = [
 	"pallet-passport/runtime-benchmarks",
 	"pallet-user/runtime-benchmarks",
 	"pallet-whitelist/runtime-benchmarks",
-	"pallet-bounties/runtime-benchmarks"
+	"pallet-bounties/runtime-benchmarks",
+	"pallet-events/runtime-benchmarks",
 ]
 try-runtime = [
 	"frame-try-runtime/try-runtime",
