--- a/pallets/community/Cargo.toml
+++ b/pallets/community/Cargo.toml
@@ -52,5 +52,6 @@ std = [
 	"sp-std/std",
 	"sp-runtime/std",
 	"pallet-whitelist/std",
+	"pallet-balances/std",
 ]
 try-runtime = [ "frame-support/try-runtime" ]
