--- a/pallets/token-swap/Cargo.toml
+++ b/pallets/token-swap/Cargo.toml
@@ -13,7 +13,7 @@ repository = "https://github.com/jurteam/jur-node/"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-parity-scale-codec = { default-features = false, features = ["derive"] }
+parity-scale-codec = { default-features = false, version = "3.6.1", features = ["derive"] }
 primitives = { package = 'jur-primitives', path = '../../primitives', default-features = false }
 scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
 frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.2.0"}
